--- a/snippets/card-product.liquid
+++ b/snippets/card-product.liquid
@@ -167,6 +167,18 @@
             {%- endunless -%}
           </div>
 
+          <div class="card__subtitle">
+             {{ card_product.description | strip_html | truncate: 60 }}
+          </div>
+
+          <div class="card__metadata-row">
+            {%- for option in card_product.options_with_values limit: 2 -%}
+               {%- unless option.name == 'Title' -%}
+                <span class="card__metadata-item">{{ option.name }}: {{ option.values | first }}{% if option.values.size > 1 %} +{{ option.values.size | minus: 1 }}{% endif %}</span>
+               {%- endunless -%}
+            {%- endfor -%}
+          </div>
+
           <div class="card-information">
             {%- if show_vendor -%}
               <span class="visually-hidden">{{ 'accessibility.vendor' | t }}</span>
