Enable cart drawer by adding id to header cart icon

--- a/sections/gls-header.liquid
+++ b/sections/gls-header.liquid
@@ -81,7 +81,7 @@
         </a>
 
         <!-- Cart -->
-        <a href="{{ routes.cart_url }}" class="gls-header__cart">
+        <a href="{{ routes.cart_url }}" class="gls-header__cart" id="cart-icon-bubble">
           <div class="gls-header__cart-icon-wrapper">
             <svg width="28" height="28" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
               <path d="M6 2 3 6v14a2 2 0 0 0 2 2h14a2 2 0 0 0 2-2V6l-3-4z"/>
