--- a/sections/gls-hero-split.liquid
+++ b/sections/gls-hero-split.liquid
@@ -46,6 +46,7 @@
     background-color: {{ section.settings.bg_overlay_color }};
     opacity: {{ section.settings.bg_overlay_opacity | divided_by: 100.0 }};
     z-index: 1;
+    display: block;
   }
 
   .gls-hero-split__content-wrapper {
